# grok_reg_protocol_cpa

./: .gitignore  CUSTOMMAIL_CLI.md  DIAGNOSTIC_CLI_PROXY.md  README.md  STARTUP.md  automatic_registration_trace.py  browser_lifecycle.py  chromium_paths.py  config.example.json  cpa_export.py  custom_mail.py  custom_mail_credentials.example.txt  grok_register_ttk.py  manual_registration_trace.py  mise.toml  optimization_checks.py  proxy_rotation.py  pyproject.toml  register_cli.py  tab_pool.py
cpa_auths/: .gitkeep
cpa_xai/: __init__.py  auth_code_mint.py  browser_confirm.py  errors.py  inspection.py  mint.py  oauth_device.py  protocol_mint.py  schema.py
scripts/: activate_web_and_mint_from_accounts.py  backfill_cpa_xai_from_accounts.py  prepare_clipproxy_diagnostic.py  reactivate_cpa_auths.py
tasks/: lessons.md  todo.md
tests/: test_automatic_registration_trace.py  test_browser_lifecycle.py  test_cpa_auth_code_mint.py  test_cpa_inspection.py  test_cpa_xai_core.py  test_custom_mail.py  test_grok2api_pool_defaults.py  test_grok_web_activation.py  test_manual_registration_trace.py  test_prepare_clipproxy_diagnostic.py  test_proxy_rotation.py  test_reactivate_cpa_auths.py  test_registration_capacity.py  test_registration_health_gate.py  test_registration_rotation_integration.py
turnstilePatch/: content.js
